# windows

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run_docker.sh
src/: autogui.sh  entry.sh  samba.sh  test.py
src/hud_controller/: __init__.py  log.txt  qemu_gui.py  step.py
